--- a/Derby Forecast.ipynb
+++ b/Derby Forecast.ipynb
@@ -2,15 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -144,7 +155,7 @@
        "4          53          0.87\"          0.44\"           Rain  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,20 +163,21 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import sklearn as sk\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn import linear_model\n",
+    "from sklearn import feature_selection\n",
     "\n",
-    "data = pd.read_csv('https://raw.githubusercontent.com/p-vs-np/Derby/master/derby.csv')\n",
-    "data.columns = ['year', 'winner', 'sire', 'dam', 'second_place', 'third_place', 'time', \n",
-    "              'dist', 'track_cond', 'weather_high', 'weather_low', '24_hour_precip', '1pm_7pm_precip', 'weather']\n",
+    "data = pd.read_csv('https://raw.githubusercontent.com/p-vs-np/Derby/master/derby.csv', encoding = 'latin1')\n",
+    "\n",
+    "data.columns = ['year', 'winner', 'sire', 'dam', 'second_place', 'third_place', 'time', 'dist', \n",
+    "                'track_cond', 'weather_high', 'weather_low', '24_hour_precip', '1pm_7pm_precip', 'weather']\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -197,28 +209,354 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['new_time'] = pd.to_numeric(data['time'].str.split(\":\").str[0]) + pd.to_numeric(data['time'].str.split(\":\").str[1])/60\n",
+    "data['dist'] = pd.to_numeric(data['dist'].str.replace('F','').str.strip())\n",
+    "data['track_cond'] = data['track_cond'].str.lower()\n",
+    "data['24_hour_precip'] = data['24_hour_precip'].str.replace('\"','').str.replace('Trace', '0')\n",
+    "data['24_hour_precip'] = pd.to_numeric(data['24_hour_precip'])\n",
+    "data['1pm_7pm_precip'] = data['1pm_7pm_precip'].str.replace('\"','').str.replace('Trace', '0')\n",
+    "data['1pm_7pm_precip'] = pd.to_numeric(data['1pm_7pm_precip'])\n",
+    "data['weather_high'] = pd.to_numeric(data['weather_high'].str.replace('\\xa0',''))\n",
+    "data['weather_low'] = pd.to_numeric(data['weather_low'].str.replace('\\xa0',''))\n",
+    "data['weather'] = data['weather'].str.lower().str.replace('\\xa0','')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data.join(pd.get_dummies(data['weather'],prefix = 'weather', drop_first = True))\n",
+    "data = data.join(pd.get_dummies(data['track_cond'],prefix = 'track_cond', drop_first = True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['10' '12']\n"
+      "2.06\n",
+      "[ 2.05293885]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Hussain\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:395: DeprecationWarning: Passing 1d arrays as data is deprecated in 0.17 and will raise ValueError in 0.19. Reshape your data either using X.reshape(-1, 1) if your data has a single feature or X.reshape(1, -1) if it contains a single sample.\n",
+      "  DeprecationWarning)\n"
      ]
     }
    ],
    "source": [
-    "data['dist'] = data['dist'].str.replace('F','').str.strip()\n",
-    "print(data['dist'].unique())\n"
+    "lm = linear_model.LinearRegression()\n",
+    "\n",
+    "train = data[1:]\n",
+    "test = data.iloc[0]\n",
+    "\n",
+    "x_train = train.drop(['year', 'winner', 'sire', 'dam', 'second_place', 'third_place', 'time', \n",
+    "               'new_time', 'track_cond', 'weather'], axis = 1)\n",
+    "\n",
+    "x_test = test.drop(['year', 'winner', 'sire', 'dam', 'second_place', 'third_place', 'time', \n",
+    "               'new_time', 'track_cond', 'weather'])\n",
+    "\n",
+    "lm_mod = lm.fit(x_train,train['new_time']) #train the linear regression model\n",
+    "\n",
+    "print(data['new_time'][0]) # actual in minutes\n",
+    "print(lm.predict(x_test)) # predicted in minutes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.42366898]\n",
+      "-5.85492957746\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Hussain\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:395: DeprecationWarning: Passing 1d arrays as data is deprecated in 0.17 and will raise ValueError in 0.19. Reshape your data either using X.reshape(-1, 1) if your data has a single feature or X.reshape(1, -1) if it contains a single sample.\n",
+      "  DeprecationWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((data['new_time'][0] - lm.predict(x_test))*60) # linear regression OOS forecast is 0.42 seconds lower than actual\n",
+    "print((data['new_time'][0] - lm.predict(x_train).mean())*60) # naive mean prediction is 5.9 seconds higher than actual"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Surprisingly, weather has no impact on win time. The most important variable is the distance traveled. \n",
+      "The coefficient on the weather_low of the day is significant and positive, thereby indicating that higher \n",
+      "lower temperatures are associated with slower win times. Relative to a baseline baseline of \"dusty\", track \n",
+      "conditions of \"fast\" and \"heavy\" are associated with slower win times. \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Variable</th>\n",
+       "      <th>Coefficient</th>\n",
+       "      <th>P-value</th>\n",
+       "      <th>Significant</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>dist</td>\n",
+       "      <td>0.285934</td>\n",
+       "      <td>2.931116e-87</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>weather_high</td>\n",
+       "      <td>-0.000055</td>\n",
+       "      <td>7.718419e-01</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>weather_low</td>\n",
+       "      <td>0.001038</td>\n",
+       "      <td>2.257352e-02</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>24_hour_precip</td>\n",
+       "      <td>0.010049</td>\n",
+       "      <td>2.912793e-01</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1pm_7pm_precip</td>\n",
+       "      <td>0.013768</td>\n",
+       "      <td>3.716788e-01</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>weather_cloudy</td>\n",
+       "      <td>-0.001097</td>\n",
+       "      <td>1.795275e-01</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>weather_mostly cloudy</td>\n",
+       "      <td>-0.041561</td>\n",
+       "      <td>2.571694e-01</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>weather_mostly sunny</td>\n",
+       "      <td>-0.038415</td>\n",
+       "      <td>1.762946e-01</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>weather_partly cloudy</td>\n",
+       "      <td>-0.020050</td>\n",
+       "      <td>7.113638e-01</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>weather_partly sunny</td>\n",
+       "      <td>-0.048909</td>\n",
+       "      <td>2.242739e-01</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>weather_rain</td>\n",
+       "      <td>-0.053903</td>\n",
+       "      <td>6.144410e-01</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>weather_showers</td>\n",
+       "      <td>-0.024665</td>\n",
+       "      <td>5.876750e-01</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>weather_sleet</td>\n",
+       "      <td>-0.050269</td>\n",
+       "      <td>7.321431e-01</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>weather_sunny</td>\n",
+       "      <td>-0.007125</td>\n",
+       "      <td>6.307511e-01</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>weather_thunderstorms</td>\n",
+       "      <td>-0.023036</td>\n",
+       "      <td>9.851822e-02</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>track_cond_fast</td>\n",
+       "      <td>0.029295</td>\n",
+       "      <td>2.542514e-03</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>track_cond_good</td>\n",
+       "      <td>0.059929</td>\n",
+       "      <td>2.015592e-01</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>track_cond_heavy</td>\n",
+       "      <td>0.145460</td>\n",
+       "      <td>2.422674e-02</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>track_cond_muddy</td>\n",
+       "      <td>0.107354</td>\n",
+       "      <td>4.257072e-01</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>track_cond_sloppy</td>\n",
+       "      <td>0.048403</td>\n",
+       "      <td>2.928030e-01</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>track_cond_slow</td>\n",
+       "      <td>0.120569</td>\n",
+       "      <td>3.033964e-01</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>track_cond_very dusty</td>\n",
+       "      <td>0.045374</td>\n",
+       "      <td>1.487659e-01</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Variable  Coefficient       P-value  Significant\n",
+       "0                    dist     0.285934  2.931116e-87         True\n",
+       "1            weather_high    -0.000055  7.718419e-01        False\n",
+       "2             weather_low     0.001038  2.257352e-02         True\n",
+       "3          24_hour_precip     0.010049  2.912793e-01        False\n",
+       "4          1pm_7pm_precip     0.013768  3.716788e-01        False\n",
+       "5          weather_cloudy    -0.001097  1.795275e-01        False\n",
+       "6   weather_mostly cloudy    -0.041561  2.571694e-01        False\n",
+       "7    weather_mostly sunny    -0.038415  1.762946e-01        False\n",
+       "8   weather_partly cloudy    -0.020050  7.113638e-01        False\n",
+       "9    weather_partly sunny    -0.048909  2.242739e-01        False\n",
+       "10           weather_rain    -0.053903  6.144410e-01        False\n",
+       "11        weather_showers    -0.024665  5.876750e-01        False\n",
+       "12          weather_sleet    -0.050269  7.321431e-01        False\n",
+       "13          weather_sunny    -0.007125  6.307511e-01        False\n",
+       "14  weather_thunderstorms    -0.023036  9.851822e-02        False\n",
+       "15        track_cond_fast     0.029295  2.542514e-03         True\n",
+       "16        track_cond_good     0.059929  2.015592e-01        False\n",
+       "17       track_cond_heavy     0.145460  2.422674e-02         True\n",
+       "18       track_cond_muddy     0.107354  4.257072e-01        False\n",
+       "19      track_cond_sloppy     0.048403  2.928030e-01        False\n",
+       "20        track_cond_slow     0.120569  3.033964e-01        False\n",
+       "21  track_cond_very dusty     0.045374  1.487659e-01        False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lm_mod_test = feature_selection.f_regression(x_train, train['new_time'])\n",
+    "#lm_mod_test[1]\n",
+    "#print(list(x_train))\n",
+    "lm_mod.coef_\n",
+    "\n",
+    "result = pd.DataFrame({'Variable': list(x_train), \n",
+    "             'Coefficient': lm_mod.coef_, \n",
+    "             'P-value':lm_mod_test[1], \n",
+    "              'Significant': lm_mod_test[1]<=0.05})\n",
+    "\n",
+    "print(\"\"\"Surprisingly, weather has no impact on win time. The most important variable is the distance traveled. \n",
+    "The coefficient on the weather_low of the day is significant and positive, thereby indicating that higher \n",
+    "lower temperatures are associated with slower win times. Relative to a baseline baseline of \"dusty\", track \n",
+    "conditions of \"fast\" and \"heavy\" are associated with slower win times. \"\"\")\n",
+    "\n",
+    "result[['Variable', 'Coefficient', 'P-value', 'Significant']]\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -232,9 +570,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
